# rust-heat-diffusion-solver

./: CITATION.cff  Cargo.toml  README.md
results/: residuals.csv  summary.txt  temperature.csv
src/: main.rs
