[package]
name = "rust-fvm-heat-conduction"
version = "1.0.0"
edition = "2021"
authors = ["Ahmed Kandil"]
description = "A dependency-free Rust implementation of a two-dimensional steady heat-conduction solver using the Finite Volume Method."
license = "MIT"
repository = "https://github.com/Kandil2001/Rust-FVM-Heat-Conduction"
readme = "README.md"
keywords = ["finite-volume", "heat-conduction", "scientific-computing", "numerical-methods"]
categories = ["science", "simulation"]

[profile.release]
opt-level = 3
